fix sensor display none

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,16 @@
 [general]
-name: piX
-output_dir: /home/pi/data/
+ # Unit name
+name= piX
+# Mode options= server/camera
+mode= server
+output_dir= /home/pi/data/
 
 [communication]
-# Mode options: server/camera
-mode: server
-# delay before reporting node down
-timeout_threshold: 60 
-# accepted range of time drift between rtcs
-time_drift_threshold: 600
 # database location
-db_location: monitor/heartbeats.db
-# grace period on startup before checking for heartbeat
-startup_grace_period: 20
+db_location= monitor/heartbeats.db
+# delay before reporting node down (seconds)
+timeout_threshold= 60
+# accepted range of time drift between RTCs (seconds)
+time_drift_threshold= 600
+# grace period on startup before checking for heartbeat (seconds)
+startup_grace_period= 20  
