functionalize camera_main

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,18 @@
 [general]
  # Unit name
-name= piX
+name= server1
 # Mode options= server/camera
 mode= server
-output_dir= /home/pi/data/
+output_dir= data
+
+[imaging]
+size= [2304, 1296]
+lens_position= 4.0
 
 [communication]
 # database location
-db_location= monitor/heartbeats.db
-# delay before reporting node down (seconds)
+db_location= logs/heartbeats.db
+# delay before reporting camera down (seconds)
 timeout_threshold= 60
 # accepted range of time drift between RTCs (seconds)
 time_drift_threshold= 600
