camera_main script compatibility

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,13 @@
 [general]
  # Unit name
-name= server1
+name= camera1
 # Mode options= server/camera
-mode= server
+mode= camera
 output_dir= data
 
 [imaging]
-size= [2304, 1296]
+w = 2304
+h = 1296
 lens_position= 4.0
 
 [communication]
