--- a/config.ini
+++ b/config.ini
@@ -10,6 +10,7 @@ size= [2304, 1296]
 lens_position= 4.0
 
 [communication]
+network_ip= 192.168.2.1
 # database location
 db_location= logs/heartbeats.db
 # delay before reporting camera down (seconds)
