--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -7,6 +7,7 @@ adafruit-circuitpython-framebuf==1.6.7
 adafruit-circuitpython-requests==4.1.10
 adafruit-circuitpython-sht31d==2.3.26
 adafruit-circuitpython-ssd1306==2.12.19
+adafruit-circuitpython-veml7700==2.1.2
 adafruit-circuitpython-typing==1.11.2
 Adafruit-PlatformDetect==3.77.0
 Adafruit-PureIO==1.1.11
