--- a/setup/example_config.ini
+++ b/setup/example_config.ini
@@ -1,8 +1,8 @@
 [general]
  # Unit name
-name= server1
+name= 
 # Mode options= server/camera
-mode= server
+mode= 
 # Output data dir
 output_dir= data
 # Logging output level (INFO,DEBUG)
