--- a/setup/requirements.txt
+++ b/setup/requirements.txt
@@ -21,7 +21,7 @@ gpiozero==1.6.2
 idna==2.10
 numpy==1.19.5
 paho-mqtt==2.1.0
-pandas==2.2.3
+pandas
 picamera2==0.3.12
 pidng==4.0.9
 piexif==1.1.3
