--- a/setup/example_config.ini
+++ b/setup/example_config.ini
@@ -1,22 +1,21 @@
 [general]
  # Unit name
-name= 
+name=
 # Mode options= server/camera
-mode= 
+mode=
 # Output data dir
 output_dir= data
 # Logging output level (INFO,DEBUG)
 log_level= INFO
-# Sensor read interval (seconds)
-sensor_int = 60
 
 [scheduling]
-# Use sunrise/sunset +/- 1 hr for schedule? (True/False)
+# Use sunrise/sunset schedule? (True/False)
 sun_sched= True
 # Default startup time
 default_start= 07:00:00
 # Default shutdown time
 default_stop= 19:00:00
+#ADD CONTINUOUS OPTION
 
 [imaging]
 # Image width
@@ -26,6 +25,12 @@ h = 1296
 # Lens position (focus)
 lens_position= 4.0
 
+[sensors]
+# Sensor read frequency (seconds)
+sensor_freq = 2
+# Sensor db write frequency (seconds)
+db_write_freq = 10
+
 [communication]
 # Local network IP (Pi to Pi)
 network_ip= 192.168.2.1
@@ -34,12 +39,14 @@ mqtt_db= logs/heartbeat.db
 # weather db loc
 sensor_db= data/sensor.db
 # Send sensor data frequency (seconds)
-send_freq = 120
+send_freq = 60
 # Send camera status frequency (seconds)
-camstat_freq = 600
+camstatus_freq = 60
 # delay before reporting camera down (seconds)
 timeout_threshold= 60
 # accepted range of time drift between RTCs (seconds)
-time_drift_threshold= 600
+time_drift_threshold= 300
 # grace period on startup before checking for heartbeat (seconds)
-startup_grace_period= 20  
+startup_grace_period= 20
+# camera_main monitor frequency (seconds)
+monitor_freq = 60
