all dbs in bee_cam/data

--- a/setup/example_config.ini
+++ b/setup/example_config.ini
@@ -35,7 +35,7 @@ db_write_freq = 10
 # Local network IP (Pi to Pi)
 network_ip= 192.168.2.1
 # mqtt database location
-mqtt_db= logs/heartbeat.db
+mqtt_db= data/heartbeat.db
 # weather db loc
 sensor_db= data/sensor.db
 # Send sensor data frequency (seconds)
